k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-fastapi
  template:
    metadata:
      labels:
        app: hello-fastapi
    spec:
      containers:
        - name: hello-fastapi
          image: ghcr.io/kbsinfotech/hello-fastapi:latest
          ports:
            - containerPort: 8000
