k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-fastapi-svc
spec:
  type: NodePort
  selector:
    app: hello-fastapi
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
